logo and coments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,12 +47,12 @@ layout: default
                 {% endfor %}
             </span>
         </div>
-        
+
         {% endif %}
     </footer>
 
     {% include share.html %}
 
-    {% include disqus.html %}
+    <div class="fb-comments" data-href="https://www.colomafarre.github.io" data-numposts="5"></div>
 
 </div>
