--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,7 +6,7 @@
 /*
    Variables
    ========================================================================== */
-$base-font-family:      "Impact", cursive, sans-serif;
+$base-font-family:      "Lucida Sans Unicode", sans-serif;
 $base-font-family-sans: "Lato", sans-serif;
 $base-font-family-mono: "Source Code Pro", monospace;
 $base-font-size:        16px;
