--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,18 +1,16 @@
-{% if page.disqus %}
+{% if page.comments %}
 <div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = '{{ site.data.social.disqus_shortname }}';
-    // var disqus_identifier = 'a unique identifier for each page where Disqus is present';
-    // var disqus_title = 'a unique title for each page where Disqus is present';
-    // var disqus_url = 'a unique URL for each page where Disqus is present';
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+  <script>
+  var disqus_config = function () {
+  this.page.url = {{site.baseurl}}{{page.url}};
+  this.page.identifier = {{ page.id }};
+  };
+  (function() { // DON'T EDIT BELOW THIS LINE
+  var d = document, s = d.createElement('script');
+  s.src = '//www-familyonthego-life.disqus.com/embed.js';
+  s.setAttribute('data-timestamp', +new Date());
+  (d.head || d.body).appendChild(s);
+  })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endif %}
