--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,5 @@ layout: default
     </footer>
 
     {% include share.html %}
-
-    <div class="fb-comments" data-href="https://www.colomafarre.github.io" data-numposts="5"></div>
-
+    {% include disqus.html %}
 </div>
