--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -2,7 +2,7 @@
 <div id="disqus_thread"></div>
   <script>
   var disqus_config = function () {
-  this.page.url = "{{site.baseurl}}{{page.url}}";
+  this.page.url = "{{ site.url | replace_regex: 'http://', '' }}{{page.url}}";
   this.page.identifier = "{{ page.id }}";
   };
   (function() { // DON'T EDIT BELOW THIS LINE
