--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,17 +23,6 @@ layout: default
     <article class="post-content">
         {{ content }}
 
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <!-- first family ad -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-7902219614622730"
-             data-ad-slot="1081975204"
-             data-ad-format="auto"></ins>
-        <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-
     </article>
 
     <footer class="post-meta">
@@ -61,6 +50,17 @@ layout: default
 
         {% endif %}
     </footer>
+
+    <script type="text/javascript">
+        google_ad_client = "ca-pub-7902219614622730";
+        google_ad_slot = "2419107601";
+        google_ad_width = 320;
+        google_ad_height = 100;
+    </script>
+    <!-- second family ad -->
+    <script type="text/javascript"
+    src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+    </script>
 
     {% include share.html %}
     {% include disqus.html %}
